  * pg_virtualenv: Export PGVERSION with the PostgreSQL major version.
  * pg_buildext: Add "virtualenv" action that loops over shells for testing.
  * pg_buildext: Fix "installed-versions" for empty package name suffixes.
  * pg_buildext: Don't update debian/control if debian/control.in is missing.
  * Move dh_pgxs_test after dh_link so we have the links in the install trees.

 -- Christoph Berg <myon@debian.org>  Mon, 05 Oct 2020 11:36:38 +0200

postgresql-common (218) unstable; urgency=medium

  * pg_buildext installcheck: Set DESTDIR during build-time tests.
  * pg_buildext clean: Do not assume Makefile to be present. (Closes: #971517)

 -- Christoph Berg <myon@debian.org>  Fri, 02 Oct 2020 12:49:44 +0200

postgresql-common (217) unstable; urgency=medium

  * Set PostgreSQL 13 as default version.
  * pg_upgradecluster: Rename wal_keep_segments to wal_keep_size on upgrades
    to PG 13.
  * pg_createcluster: Add option --quiet to suppress initdb output and make
    pg_virtualenv use it.
  * pg_createcluster: Allow -o --pgoption to override createcluster.conf
    settings.
  * t/060_obsolete_confparams.t: Generate full config files dynamically.
  * dh_make_pgxs: Use current debhelper version instead of the oldest one,
    support setting homepage, general template copy-editing.
  * Implement extension building as `dh $@ --with pgxs` and pgxs_loop, backed
    by `--buildsystem=pgxs` and pgxs_loop. We also run `make installcheck` at
    extension build time now via dh_pgxs_test and our PostgreSQL
    extension_destdir patch. Previously extensions could only be tested at
    runtime via autopkgtest.
  * pg_buildext loop: Clean after building instead of before.
  * Add `pg_buildext psql` action for extensions that use psql for testing.
  * Drop the PG major prefix from postgresql-all version number so extensions
    can declare sensible versioned dependencies on it.
  * Updated it debconf translation by Luca Monducci, thanks! (Closes: #969220)
