@@ -6,6 +6,7 @@ postgresql-common (219) UNRELEASED; urgency=medium
   * pg_buildext: Fix "installed-versions" for empty package name suffixes.
   * pg_buildext: Don't update debian/control if debian/control.in is missing.
   * Move dh_pgxs_test after dh_link so we have the links in the install trees.
+  * Skip invoking dh_pgxs_test if nocheck is set, or when on hurd-i386.
 
  -- Christoph Berg <myon@debian.org>  Mon, 05 Oct 2020 11:36:38 +0200
 
